# goit-web-hw-12

./: README.md  main.py  pyproject.toml
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/schemas/: contacts.py  user.py
src/services/: auth.py  email.py  users.py
