[tool.poetry]
name = "hw11-fastapi"
version = "0.1.0"
description = ""
authors = ["AnybodyKnows <120731166+AnybodyKnows@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.31"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pip = "^24.1.1"
install = "^1.3.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pathlib = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
